# tako-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  agent.json  docker-compose.yml  glama.json  llms-full.txt  llms.txt  main.py  openapi.yaml  pyproject.toml  release-please-config.json  requirements.txt  server.json  settings.json  smithery.yaml
.github/workflows/: pr-title-lint.yml  publish-mcp.yml  regenerate.yml  release-please.yml  workers-ci.yml  workers-deploy.yml  workers-smoke.yml
docs/: tool-surface-audit-2026-04.md
docs/connector-submissions/: chatgpt-test-script.md  chatgpt.md
docs/superpowers/plans/: 2026-04-30-get-report-full-content.md  2026-05-04-knowledge-search-async-split.md  2026-06-19-tako-mcp-ga-parity.md
docs/superpowers/specs/: 2026-04-24-workers-deploy-workflow-design.md  2026-04-30-get-report-full-content-design.md  2026-05-01-tako-2698-consumer-host-docs-design.md  2026-05-04-knowledge-search-async-split-design.md
integrations/: __init__.py  autogen_tako.py  crewai_tako.py  langchain_tako.py  openai_actions.yaml  vercel_ai_tako.ts
openapi/: sdk.yaml
registry/: awesome-mcp-servers.md  docker-mcp.yaml  glama.yaml  mcp-index.json  metadata.json  server.json  smithery.yaml
src/: main.py
src/smithery/: __init__.py
src/tako_mcp/: __init__.py  main.py  server.py
src/tako_mcp/smithery/: server.py
tests/: test_client.py
typescript/: package-lock.json  package.json
typescript/src/: index.ts
workers/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts  wrangler.jsonc
workers/scripts/: gen-registry.test.ts  gen-registry.ts  gen-schemas.test.ts  gen-schemas.ts  smoke.ts  tsconfig.json
workers/src/: auth.test.ts  auth.ts  cors.ts  django.test.ts  django.ts  django_stream.test.ts  django_stream.ts  env.ts  exports.test.ts  exports.ts  icons.ts  index.test.ts  index.ts  mcp.test.ts  mcp.ts
workers/src/oauth/: access.test.ts  access.ts  cookies.test.ts  cookies.ts  handlers.test.ts  handlers.ts  identity.test.ts  identity.ts  jwt.test.ts  jwt.ts  stytch.ts  types.ts
workers/src/tools/: __test_helpers.ts  _async_search_shape.ts  _chart_widget.ts  _example.ts  _registry.ts  _report_shape.ts  _search_results.ts  create_chart.ts  create_report.test.ts  create_report.ts  explore_knowledge_graph.ts  export_report.test.ts  export_report.ts  get_card_insights.ts  get_chart_image.ts  get_chart_schema.ts  get_credit_balance.ts  (+28 more)
workers/test/: index.test.ts
(+2 files in other folders)
