[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "tako-mcp"
version = "0.1.0"
description = "Tako MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "pydantic>=2.12.0",
    "requests>=2.32.5",
    "smithery>=0.4.2",
    "tako-sdk>=0.1.39",
]

[project.scripts]
dev = "smithery.cli.dev:main" # Run the MCP server in development mode
start = "smithery.cli.start:main" # Run the MCP server in production mode
playground = "smithery.cli.playground:main" # Run server with interactive testing playground

[tool.smithery]
server = "tako_mcp.smithery.server:create_server" # Function that returns a patched FastMCP server
log_level = "warning" # Production log level (optional, defaults to "warning")
