[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tako-mcp"
version = "0.1.0"
description = "MCP server for Tako's knowledge base and data visualizations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tako", email = "hello@trytako.com" }
]
keywords = ["mcp", "model-context-protocol", "data-visualization", "charts", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "starlette>=0.50.0",
    "mcp-ui-server>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/TakoData/tako-mcp"
Documentation = "https://github.com/TakoData/tako-mcp#readme"
Repository = "https://github.com/TakoData/tako-mcp"
Issues = "https://github.com/TakoData/tako-mcp/issues"

[project.scripts]
tako-mcp = "tako_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tako_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
